--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -1,6 +1,6 @@
 <nav class="navigation">
-    <a href="" class="nav__btns">Home</a>
-    <a href="" class="nav__btns">Mammals</a>
-    <a href="" class="nav__btns">Birds</a>
-    <a href="" class="nav__btns">Reptiles</a>
+    <a href="/" class="nav__btns">Home</a>
+    <a href="/mammals" class="nav__btns">Mammals</a>
+    <a href="/bird" class="nav__btns">Birds</a>
+    <a href="/reptile" class="nav__btns">Reptiles</a>
 </nav>
