--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -1,5 +1,16 @@
 <div class="sidebar">
-    <% if(locals.sidebarButtons) { %>
-        <%- sidebarButtons %>
-            <% } %>
+    <% if(locals.preview && locals.animalData) { %>
+        <% animalData.forEach(animal => { console.log(animal.name.replaceAll(" ", "")) %>
+        <a href="../preview/<%= animal.name.replaceAll(" ", "").toLowerCase() %>" class="sidebar__btn"> <%= animal.name %>
+        </a>
+        <% }); %>
+      
+    <% } else if(locals.animalData) {%>
+        <% animalData.forEach(animal => { console.log(animal.name.replaceAll(" ", "")) %>
+            <a href="../<%= (animal.group +"/"+ animal.name).replaceAll(" ", "").toLowerCase() %>" class="sidebar__btn <% if(locals.url) { %> 
+                <%= url ===  '/'+animal.name.toLowerCase().replaceAll(" ", "") ? 'active' : "" %>
+                <%  } %> "><%= animal.name %></a>
+          
+            <% }); %>
+                <% } %>
 </div>
