--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -5,7 +5,8 @@
 }
 
 html {
-   height: 100vh;
+    height: 100vh;
+    font-size: 62.5%;
 }
 
 body {
@@ -21,23 +22,47 @@ body {
 
 .main__information {
     background-color: yellow;
-  
+    font-size: 1.5rem;
     flex: 1;
 }
 
 .sidebar {
-    flex: 0 0 20%;
+    flex: 0 0 15%;
     background-color: blue;
+    display: flex;
+    flex-direction: column;
+
+
+}
+
+.sidebar__btn {
+
+    text-decoration: none;
+    background-color: red;
+    text-align: center;
+    padding: 1rem;
+    font-size: 2rem;
+    border-bottom: 1px #fff solid;
+    transition: all .1s;
+   
+
+    &:focus {
+        /* background-color: rgb(7, 7, 175); */
+        color: #fff;
+    }
 }
 
 .footer {
     background-color: green;
     padding: 2rem;
+    font-size: 1.5rem;
 }
 
 .header {
     padding: 2rem;
     background-color: blue;
+    font-size: 2.5rem;
+    text-align: center;
 }
 
 .navigation {
@@ -49,5 +74,11 @@ body {
     a {
         padding: 2rem;
         text-decoration: none;
+        font-size: 1.5rem;
     }
+}
+
+.active {
+    background-color: blue;
+    color: #fff;
 }
