--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -3,10 +3,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/styles/styles.css">
     <title>
-        <% if(locals.headTitle) { %>
-            <%- headTitle %>
-                <% } else { %>
-                    Node Zoo
-                    <% } %>
+        <% locals.headTitle ? headTitle : "Node Zoo" %>
     </title>
 </head>
